# Camera-Based-UAV-Land-Guiding-System-

./: CMakeLists.txt  README.md
cpp/cali/: cali.yaml  imglists.txt
cpp/headers/: CalPhoto.h  Calibration.h  parameters.h
cpp/src/: data.yaml  main.cpp  test.cpp
